# terminology

./: .gitignore  README.md  pyproject.toml
scripts/: inject-terms.sh
src/terminology/: inject_terms.py  tbx2json.py  term2dix.py  utils.py
